cabal-version:       2.4
name:                eventslog-benchmark
description:         eventslog performance on threads/message size
category:            eventslog
version: 0.3.2
license-file:        LICENSE
license:             Apache-2.0
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/opentelemetry-haskell

common options
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

executable eventslog-benchmark
  import: options
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts -T"
    -eventlog
  build-depends:
    base >= 4.12 && < 5,
    clock,
    text,
    bytestring,
    ghc-trace-events,
    formatting
  hs-source-dirs: .
  main-is: Main.hs
